--- a/app/account/templates/account/reset_password.html
+++ b/app/account/templates/account/reset_password.html
@@ -1,6 +1,6 @@
 {% extends "bbase.html" %}
 
-{% block title %} Forget Password {% endblock %}
+{% block title %} 忘记密码 {% endblock %}
 
 {% block exthead %}
 <link href="/static/signin.css" rel="stylesheet">
@@ -17,12 +17,12 @@
 			{% for error in form.non_field_errors %} {{ error | escape }} {% endfor %}
 		</div>
 		{% endif %}
-		<h2 class="form-signin-heading">Forget Password</h2>
+		<h2 class="form-signin-heading">重置密码</h2>
 		{{ form.email.errors }}
 		<label for="email" class="sr-only">Email</label>
-		<input type="email" id="email" name="email" class="form-control" placeholder="Email" required autofocus>
+		<input type="email" id="email" name="email" class="form-control" placeholder="输入Email" required autofocus>
 		<br />
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Confirm</button>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">提交</button>
 	</form>
 
 </div>
