--- a/templates/about.html
+++ b/templates/about.html
@@ -12,6 +12,6 @@
 		QQ: <code>542490501</code><br/>
 		Location: Shanghai, China
 	</p>
-	<p>返回 <a href="/">首页</a></p>
+	<a href="/" class="btn btn-default" role="button">返回首页</a>
 </div>
 {% endblock %}
