--- a/app/account/templates/account/profile.html
+++ b/app/account/templates/account/profile.html
@@ -1,19 +1,19 @@
 {% extends "bbase.html" %}
 
-{% block title %} Profile {% endblock %}
+{% block title %} 个人资料 {% endblock %}
 
 {% block content %}
 <div class="container">
 	<div class="col-sm-3">
 		<div class="list-group">
-			<a href="#" class="list-group-item active">Profile</a>
-			<a href="{% url 'security' %}" class="list-group-item">Security</a>
+			<a href="#" class="list-group-item active">个人资料</a>
+			<a href="{% url 'security' %}" class="list-group-item">隐私</a>
 		</div>
 	</div>
 	<div class="col-sm-5">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">Profile</h3>
+				<h3 class="panel-title">个人资料</h3>
 			</div>
 			<div class="panel-body">
 				<form role="form" action="{% url 'profile' %}" method="post">
@@ -24,7 +24,7 @@
 					</div>
 					{% endif %}
 					<div class="form-group">
-						<label for="username">Username</label>
+						<label for="username">用户名</label>
 						<input type="text" id="username" name="username" class="form-control" disabled="true" value="{{user.username}}">
 					</div>
 					<div class="form-group">
@@ -33,15 +33,15 @@
 					</div>
 					<div class="form-group">
 						{{ form.first_name.errors }}
-						<label for="first_name">First Name</label>
+						<label for="first_name">名字</label>
 						<input type="text" id="first_name" name="first_name" class="form-control" value="{{user.first_name}}">
 					</div>
 					<div class="form-group">
 						{{ form.last_name.errors }}
-						<label for="last_name">Last Name</label>
+						<label for="last_name">姓</label>
 						<input type="text" id="last_name" name="last_name" class="form-control" value="{{user.last_name}}">
 					</div>
-					<button class="btn btn-default" type="submit">Update Profile</button>
+					<button class="btn btn-default" type="submit">更新资料</button>
 				</form>
 			</div>
 		</div>
