--- a/app/account/templates/account/security.html
+++ b/app/account/templates/account/security.html
@@ -1,19 +1,19 @@
 {% extends "bbase.html" %}
 
-{% block title %} Security {% endblock %}
+{% block title %} 隐私 {% endblock %}
 
 {% block content %}
 <div class="container">
 	<div class="col-sm-3">
 		<div class="list-group">
-			<a href="{% url 'profile' %}" class="list-group-item">Profile</a>
-			<a href="#" class="list-group-item active">Security</a>
+			<a href="{% url 'profile' %}" class="list-group-item">个人资料</a>
+			<a href="#" class="list-group-item active">隐私</a>
 		</div>
 	</div>
 	<div class="col-sm-5">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title">Change Password</h3>
+				<h3 class="panel-title">修改密码</h3>
 			</div>
 			<div class="panel-body">
 				<form role="form" action="{% url 'security' %}" method="post">
@@ -25,21 +25,21 @@
 					{% endif %}
 					<div class="form-group">
 						{{ form.old_password.errors }}
-						<label for="old_password">Old Password</label>
+						<label for="old_password">旧密码</label>
 						<input type="password" id="old_password" name="old_password" class="form-control" required>
 					</div>
 					<div class="form-group">
 						{{ form.password.errors }}
-						<label for="password">New Password</label>
+						<label for="password">新密码</label>
 						<input type="password" id="password" name="password" class="form-control" required>
 					</div>
 					<div class="form-group">
 						{{ form.password_confirm.errors }}
-						<label for="password_confirm">Confirm New Password</label>
+						<label for="password_confirm">确认新密码</label>
 						<input type="password" id="password_confirm" name="password_confirm" class="form-control" required>
 					</div>
-					<button class="btn btn-default" type="submit">Change Password</button>
-					<a href="{%url 'reset_password'%}">Forget password?</a>
+					<button class="btn btn-default" type="submit">更新密码</button>
+					<a href="{%url 'reset_password'%}">忘记密码?</a>
 				</form>
 			</div>
 		</div>
