--- a/app/account/templates/account/sign_in.html
+++ b/app/account/templates/account/sign_in.html
@@ -1,6 +1,6 @@
 {% extends "bbase.html" %}
 
-{% block title %} Sign In {% endblock %}
+{% block title %} 登录 {% endblock %}
 
 {% block exthead %}
 <link href="/static/signin.css" rel="stylesheet">
@@ -17,20 +17,20 @@
 			{% for error in form.non_field_errors %} {{ error | escape }} {% endfor %}
 		</div>
 		{% endif %}
-		<h2 class="form-signin-heading">Sign In</h2> 
+		<h2 class="form-signin-heading">登录</h2> 
 		{{ form.username.errors }}
-		<label for="username" class="sr-only">Username</label>
-		<input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
+		<label for="username" class="sr-only">用户名</label>
+		<input type="text" id="username" name="username" class="form-control" placeholder="用户名" required autofocus>
 		{{ form.password.errors }}
-		<label for="password" class="sr-only">Password</label>
-		<input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
+		<label for="password" class="sr-only">密码</label>
+		<input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
 		<div class="checkbox">
 			<label>
-				<input type="checkbox" value="remember-me"> Remember me
+				<input type="checkbox" value="remember-me"> 记住我
 			</label>
 		</div>
-		<button class="btn btn-lg btn-primary btn-block" type="submit">Confirm</button>
-		<a href="{%url 'reset_password'%}">Forget password?</a>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">确定</button>
+		<a href="{%url 'reset_password'%}">忘记密码?</a>
 	</form>
 
 </div>
